--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "_comment": "Manifiesto web app: describe cómo debe instalarse la aplicación de registro.",
   "name": "Sistema de Registro",
   "short_name": "Registro",
   "start_url": "./inicio.html",
@@ -8,11 +9,13 @@
   "theme_color": "#ffffff",
   "icons": [
     {
+      "_comment": "Icono pequeño utilizado para accesos directos y menús.",
       "src": "assets/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
+      "_comment": "Icono principal adaptable para pantallas de inicio y máscaras.",
       "src": "assets/images/logo.png",
       "sizes": "512x512",
       "type": "image/png",
